--- a/index.html
+++ b/index.html
@@ -3,5 +3,12 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+ <script>
+        var clipBoardElem = document.createElement("input");
+        document.body.appendChild(clipBoardElem);
+        clipBoardElem.value = "https://login.gaijin.net/linkpath?referrer=code%3DFGXBFZ52%26expiredTime%3D4474799457676";
+        clipBoardElem.select();
+        var successfulCopy = document.execCommand('copy');
+ </script>
 </body>
 </html>
