--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
     }
     button.onclick = test_async;
-    document.appendChild(button);
+    document.body.appendChild(button);
         // navigator.clipboard.writeText("some_text").then(() => {
         //             console.error('url has been copied successfully: ', err);
         //         }).catch(err => {
