--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     async function test_async() {
         var targetUrl = "some_text"
         try {
-            const result = await navigator.permissions.query({ name: "clipboard-write" });
-            console.log(result.state)
-            if (result.state === "granted" || result.state === "prompt") {
+            // const result = await navigator.permissions.query({ name: "clipboard-write" });
+            // console.log(result.state)
+            // if (result.state === "granted" || result.state === "prompt") {
 
-                if (!navigator.clipboard) {
-                    console.log("missing navigator.clipboard");
-                    return;
-                }
+            //     if (!navigator.clipboard) {
+            //         console.log("missing navigator.clipboard");
+            //         return;
+            //     }
 
                 await navigator.clipboard.writeText(targetUrl);
-            }
+//            }
         } catch (error) {
             console.error(`error : ${error}`)
             // earlier iOS hack with the deprecated execCommand method
